# OSDev

./: CMakeLists.txt  README.md
include/: io.h
include/drivers/: irq.h
include/libc/: stdio.h  string.h
include/mm/: mm.h  paging.h
include/sys/: exceptions.h  idt.h  io.h  irq.h  panic.h  pit.h  shell.h
include/video/: vga.h
scripts/: bochs.sh  build.sh  iso.sh  qemu.sh  zip.sh
src/: boot.asm  boot.nasm  kernel.c  linker.ld
src/drivers/: exceptions.c  idt.c  io.c  irq.c
src/libc/: stdio.c  string.c
src/mm/: paging.nasm  pmm.c  vmm.c
src/sys/: exceptions.c  gdt.nasm  idt.c  io.c  irq.c  isr.nasm  panic.c  pit.c  shell.c
src/video/: vga.c
